--- a/Labs/Final Assignment/src/pyserver/requirements.txt
+++ b/Labs/Final Assignment/src/pyserver/requirements.txt
@@ -1,2 +1,9 @@
-Flask==3.0.3
-pyinstaller==6.8.0
+# Flask==3.0.3
+# pyinstaller==6.8.0
+google-api-core==2.19.2
+google-auth==2.34.0
+google-cloud-appengine-logging==1.4.5
+google-cloud-audit-log==0.3.0
+google-cloud-core==2.4.1
+google-cloud-logging==3.11.2
+googleapis-common-protos==1.65.0
